# HelloWorld

./: .cproject  .gitignore  AppConfig.h.in  CMakeLists.txt  ExternalProjects.txt  Intl.cmake  LICENSE  README.md  build.sh
src/: Application.cpp  Application.h  Hello World.cpp
src/contracts/: IApplication.h  IIOC.h  ILogging.h  IMessageDispatcher.h  ITranslations.h
src/dispatcher/: MessageDispatcher.cpp  MessageDispatcher.h
src/helpers/: Singleton.h
src/ioc/: IOC.cpp  IOC.h  IOC_test.cpp
src/logging/: Logger.cpp  Logger.h  RLog.cpp  RLog.h
src/traits/: LoggerTrait.cpp  LoggerTrait.h
src/translations/: Translations.cpp  Translations.h
test/: test-ioc.cpp  test-main.cpp  test-translations.cpp
